# degenbot

./: .gitignore  AGENTS.md  LICENSE  README.md  UBIQUITOUS_LANGUAGE.md  __init__.py  abis.py  chainlink.py  classes.py  config.py  constants.py  exceptions.py  functions.py  justfile  liquiditypool.py  logging.py  opencode.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt  requirements_dev.txt  token.py  token_test.py  types.py
.gihub/workflows/: ci.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  degenbot_check_dependencies.yaml  publish-to-pypi.yaml
.opencode/: rpc-config.json
.opencode/agent/: evm-investigator.md  evm_investigator.md
.opencode/commands/: aave_debug.md  aave_debug_investigate.md
.opencode/plugins/: inject-env.js
.opencode/rules/: architecture.md  commands.md  database.md  debugging.md  general.md  lessons_learned.md  python.md  refactoring.md  solidity.md
.opencode/tools/: cast.ts  cast_balance.ts  cast_block.ts  cast_call.ts  cast_chains.ts  cast_logs.ts  cast_source.ts  cast_storage.ts  defaults.ts  get_eip1967_address.ts
abi/: __init__.py  abi.py
abis/: __init__.py  abis.py
arbitrage/: __init__.py  base.py  flash_borrow_to_lp_swap.py  flash_borrow_to_lp_swap_new.py  flash_borrow_to_lp_swap_new_test.py  flash_borrow_to_lp_swap_with_future.py  flash_borrow_to_router_swap.py  flash_borrow_to_swap.py  lp_swap_with_future.py  multiple_pool.py  two_pool.py  uniswap_lp_cycle.py  uniswap_lp_cycle_test.py  v3_lp_swap.py
audit/: aave_ubiquitous_language.md
benchmarks/: balancer_solver_benchmark.py  test_closed_form.py  v3_v3_solver_benchmark.py
chainlink/: __init__.py  chainlink.py
chainlinkpricefeed/: __init__.py  chainlinkpricefeed.py
debug/aave/: 0001 - GHO Interest Accrual Misclassified as Repay.md  0001 - V4 Debt Burn Rounding Error.md  0002 - Mint Events Incorrectly Match SUPPLY Instead of WITHDRAW.md  0002 - V4 Collateral Burn Rounding Error.md  0003 - Debt Transfer Double Counting in Debt Swap.md  0003 - SUPPLY Events Use Incorrect Rounding for Scaled Amount Calculation.md  0004 - Interest Accrual Scaling Error in Enrichment.md  0004 - V4 Collateral Burn Events Use Incorrect Rounding.md  0005 - Token Revision vs Pool Revision Mismatch in TokenMath.md  0005 - V4 Debt Burn Events Use Incorrect Rounding.md  0006 - BalanceTransfer Event Double Assignment in Transfer Operations.md  0006 - V4 GHO BORROW Events Use Incorrect Rounding.md  0007 - Incorrect BalanceTransfer Matching Logic.md  0007 - Interest Accrual Burn Amount Zeroed in Enrichment.md  0008 - INTEREST_ACCRUAL Debt Burn Missing Pool Event Reference.md  0008 - Repay with aTokens - Duplicate Burn Events Match Same Repay Event.md  0009 - Collateral Burn Events Miss LiquidationCall Matching.md  0009 - Liquidation Collateral Burn Amount Extraction Bug.md  0010 - GHO Debt Burn Consumes LiquidationCall Event Blocking Collateral Burn.md  0010 - V4 REPAY Missing Burn Event Handling.md  0011 - Collateral Mint Events Miss LiquidationCall Matching.md  0011 - GHO Dust Mint Not Processed.md  0012 - Collateral Burn Fails When LIQUIDATION_CALL Already Consumed.md  0012 - Collateral Operations Consume LIQUIDATION_CALL Events.md  0012 - Interest Accrual Mint Event Skipped in Flash Loan Transactions.md  0012 - V4 Withdraw Emits Mint When Interest Exceeds Withdrawal.md  0013 - Debt Burn Without Matching Pool Event.md  0013 - Interest Accrual Mint Matched to Borrow.md  0013 - WITHDRAW Interest Accrual Mint Matching with Rounding Tolerance.md  0014 - BalanceTransfer Skipped After Pure Interest Mint.md  0014 - GHO Debt Repay Balance Delta Calculation Bug.md  0014 - MINT_TO_TREASURY AccruedToTreasury Calculation Error.md  0015 - Collateral Mint Events Miss REPAY Matching for repayWithATokens.md  0015 - Interest Accrual Mint During Liquidation Not Processed.md  0015 - MINT_TO_TREASURY BalanceTransfer Amount Not Used.md  0016 - Collateral Index Mismatch in Liquidation with Multiple Operations.md  0016 - GHO Debt Burn Fails Without DeficitCreated Matching.md  0016 - REPAY with Interest Exceeding Repayment Uses Wrong Rounding.md  (+74 more)
dex/: uniswap.py  uniswap_v3.py
docs/: AGENTS.md  config.md
docs/aave/: AGENTS.md  README.md
exceptions/: exceptions.py
fork/: __init__.py  anvil_fork.py
liquiditypool/: __init__.py  liquidity_pool.py  liquiditypool.py  multi_liquidity_pool.py  uniswap_v2_lp.py
manager/: __init__.py  arbitrage_manager.py  base.py  pool_manager.py  token_manager.py
router/: __init__.py  router.py
rust/: AGENTS.md  Cargo.toml
rust/.cargo/: config.toml
rust/benches/: tick_math_bench.rs
rust/src/: abi_decoder.rs  abi_encoder.rs  abi_types.rs  address_utils.rs  address_utils_py.rs  alloy_py.rs  async_contract.rs  async_provider.rs  connection.rs  connection_py.rs  contract.rs  contract_py.rs  errors.rs  fast_hexbytes.rs  hex_utils.rs  lib.rs  provider.rs  provider_py.rs  py_cache.rs  py_converters.rs  runtime.rs  signature_parser.rs  tick_math.rs  tick_math_py.rs  utils.rs
rust/src/abi_types/: cached.rs  mod.rs  type_.rs  value.rs
rust/src/optimizers/: mobius.rs  mobius_batch.rs  mobius_int.rs  mobius_py.rs  mobius_v3.rs  mobius_v3_v3.rs  mod.rs
rust/tests/: python_integration.rs
scripts/: aave_debug_helper.py  record_chain_data.py  record_config_example.json  verify_v3_tick_data.py
tests/: _test_chainlink.py  _test_router.py  conftest.py  test_abi_adapter.py  test_anvil_fork.py  test_baseclasses.py  test_builder_endpoint.py  test_cache.py  test_chainlink.py  test_chainlink_price_feed.py  test_cli.py  test_config.py  test_cvxpy.py  test_erc20_token.py  test_erc20_token_offline.py  test_evm_types.py  test_functions.py  test_lazy_loading.py  test_managed_pool_registry.py  test_pathfinding.py  test_provider_parallel.py  test_registry.py  test_registry_offline.py  test_router.py  test_rust_functions.py  test_solady.py  test_token.py
token/: __init__.py  erc20.py  token.py
transaction/: __init__.py  base.py  simulation_ledger.py  uniswap_transaction.py
uniswap/: __init__.py  abi.py  functions.py  uniswap_managers.py  uniswap_managers_test.py
(+1187 files in other folders)
