[build-system]
requires = ["maturin ~= 1.12"]
build-backend = "maturin"

[project]
name = "degenbot"
version = "0.6.0a2"
authors = [
    { name="BowTiedDevil", email="devil@bowtieddevil.com" },
]
description = "Python classes to aid rapid development of Uniswap (V2, V3, V4), Curve V1, and Solidly V2 arbitrage bots on EVM-compatible blockchains"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic ~= 1.18",
    "click ~= 8.3",
    "cvxpy ~= 1.8",
    "networkx ~= 3.6",
    "pydantic ~= 2.12",
    "pydantic-settings ~= 2.13",
    "scipy ~= 1.17",
    "sqlalchemy ~= 2.0",
    "tenacity ~= 9.1",
    "tomlkit ~= 0.14",
    "tqdm ~= 4.67",
    "ujson ~= 5.12",
    "web3 ~= 7.14",
]
license = {text = "MIT"}
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
]

[project.urls]
Homepage = "https://www.degencode.com"
Repository = "https://github.com/BowTiedDevil/degenbot"
Tracker = "https://github.com/BowTiedDevil/degenbot/issues"
Twitter = "https://twitter.com/BowTiedDevil"

[project.scripts]
degenbot = "degenbot.cli:cli"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:", # exclude type checking imports and checks
    "return NotImplemented", # required for __eq__, __lt__, __gt__
    "def __hash__",
    "def __repr__",
    "def __str__",
    "logger.debug",
    "assert_never",
    "case _",
]

[tool.coverage.run]
source = ["src/degenbot"]

[tool.mypy]
plugins = ["pydantic.mypy"]
files=[
    "src/degenbot",
]
python_version = "3.12"
python_executable = ".venv/bin/python"
untyped_calls_exclude = "cvxpy"

[[tool.mypy.overrides]]
module="degenbot.*"
strict = true

[[tool.mypy.overrides]]
module=[
    "scipy.*",
    "tqdm.*",
    "networkx.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
preview = true

[tool.ruff.lint]
select = [
#    "DOC",      # pydoclint
#    "D",        # pydocstyle
    "ERA",      # eradicate
    "ANN",      # flake8-annotations
    "ASYNC",    # flake8-async
    "S",        # flake8-bandit
    "BLE",      # flake8-blind-except
    "FBT",      # flake8-boolean-trap
    "B",        # flake8-bugbear
    "A",        # flake8-builtins
    "COM",      # flake8-commas
    "C4",       # flake8-comprehensions
    "EM",       # flake8-errmsg
    "FIX",      # flake8-fixme
    "FA",       # flake8-future-annotations
    "ICN",      # flake8-import-conventions
    "LOG",      # flake8-logging
    "G",        # flake8-logging-format
    "INP",      # flake8-no-pep420
    "PIE",      # flake8-pie
    "T20",      # flake8-print
    "PYI",      # flake8-pyi
    "PT",       # flake8-pytest-style
    "Q",        # flake8-quotes
    "RSE",      # flake8-raise
    "RET",      # flake8-return
    "SLF",      # flake8-self
    "SIM",      # flake8-simplify
    "TID",      # flake8-tidy-imports
    "TCH",      # flake8-type-checking
    "ARG",      # flake8-unused-arguments
    "PTH",      # flake8-use-pathlib
    "FLY",      # flynt
    "I",        # isort
    "NPY",      # numpy-specific
    "N",        # pep8-naming
    "PERF",     # perflint
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "PL",       # pylint
    "UP",       # pyupgrade
    "FURB",     # refurb
    "RUF",      # ruff-specific rules
    "TRY",      # tryceratops
]
ignore = [
    "COM812",   # trailing commas are handled by the formatter
    "N818",     # error-suffix-on-exception-name
    "PLR0911",  # too-many-return-statements
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0914",  # too-many-local-variables
    "PLR0915",  # too-many-statements
    "PYI021",   # required for IDE to show wrapped Rust code info
    "RUF067",   # non-empty-init-module
    "S101",     # asserts are used often, but not as input validation
]
logger-objects = [
    "logging.logger",
    "degenbot.logger",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN",      # type annotations for tests are low priority
    "C90",      # high complexity tests are acceptable
    "PLC2701",  # tests may need to import private modules
    "PLR0904",  # don't restrict the number of methods for class-based patterns
    "PLR2004",  # many tests compare results against arbitrary values — transforming to named constants is not worthwhile
    "PLR6301",  # allow tests using class-based patterns 
    "S",        # asserts are expected for testing
    "SLF",      # tests may need to access private attributes to test implementation
    "T20",      # many tests use print
]

[tool.pytest.ini_options]
addopts = [
    "--numprocesses", "4",
    "--dist", "worksteal",
    "--import-mode", "importlib",
    "--cov", "src/degenbot",
    "--cov-branch",
    "--cov-report", "html",
    "--random-order"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = "src"
python_files = "test_*.py"
testpaths = "tests"
filterwarnings = ["ignore::DeprecationWarning:websockets.legacy"]
markers = [
    "arbitrum: tests requiring an Arbitrum One mainnet RPC",
    "base: tests requiring a Base mainnet RPC",
    "ethereum: tests requiring an Ethereum mainnet RPC",
]

[dependency-groups]
dev = [
    "coverage",
    "hypothesis",
    "maturin",
    "mypy",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-random-order",
    "pytest-xdist",
    "pytest",
    "python-dotenv",
    "ruff",
]

[tool.uv]
exclude-newer = "14 days"
link-mode = "copy"
cache-keys = [
    {file = "pyproject.toml"}, 
    {file = "rust/Cargo.toml"}, 
    {file = "rust/src/**/*.rs"},
]

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name = "degenbot.degenbot_rs"
bindings = "pyo3"
profile = "release"
features = ["pyo3/extension-module"]
python-packages = ["degenbot"]

[tool.alembic]
# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/src/degenbot/migrations"
