[package]
authors = ["BowTiedDevil <devil@bowtieddevil.com>"]
name = "degenbot_rs"
description = "Rust implementations used by the degenbot Python package."
edition = "2021"
publish = false
repository = "https://github.com/BowTiedDevil/degenbot"
license = "MIT"

[lints.rust]
warnings = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
missing_errors_doc = "allow"  # Allow missing docs for error types since we use module-level doc
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[lib]
name = "degenbot_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
alloy = { version = "^1.8", features = ["full"] }
alloy-contract = { version = "^1.8" }
alloy-primitives = { version = "^1.5" }
alloy-sol-types = { version = "^1.5", features = ["json"] }
hex = { version = "^0.4" }
num-bigint = { version = "^0.4" }
pyo3 = { version = "^0.28", features = [ "abi3-py312", "extension-module", "num-bigint"] }
reqwest = { version = "^0.13", features = ["json", "http2"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
log = { version = "^0.4" }
thiserror = { version = "^2.0" }
tokio = { version = "^1", features = ["rt-multi-thread", "time"] }

[dev-dependencies]
proptest = "^1.10"
criterion = { version = "^0.8", features = ["html_reports"] }

[[bench]]
name = "tick_math_bench"
harness = false

[profile.release]
lto = true