[package]
authors = ["BowTiedDevil <devil@bowtieddevil.com>"]
name = "degenbot_rs"
description = "Rust implementations used by the degenbot Python package."
edition = "2021"
publish = false
repository = "https://github.com/BowTiedDevil/degenbot"
license = "MIT"

[lints.rust]
warnings = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
missing_errors_doc = "allow"  # Allow missing docs for error types since we use module-level doc
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[lib]
name = "degenbot_rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
alloy = { version = "^2.0", features = ["full"] }
futures = { version = "^0.3" }
log = { version = "^0.4" }
lru = { version = "^0.14" }
parking_lot = { version = "^0.12" }
pyo3 = { version = "^0.28", features = [ "abi3-py312", "serde"] }
pyo3-async-runtimes = { version = "^0.28", features = ["tokio-runtime"] }
pyo3-log = { version = "^0.13" }
rand = { version = "^0.10" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
thiserror = { version = "^2.0" }
tokio = { version = "^1", features = ["rt-multi-thread", "time"] }

[features]
default = []
extension-module = ["pyo3/extension-module"]
auto-initialize = ["pyo3/auto-initialize"]

[dev-dependencies]
proptest = "^1.10"

[[test]]
name = "python_integration"
required-features = ["auto-initialize"]

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true